--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "homepage": "https://github.com/sumukhah/Project_Backend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^3.3.2",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.6",
+    "mongoose": "^5.10.7",
     "validator": "^13.1.17"
   },
   "devDependencies": {
